# dojo

./: .env.example  .env.miner.example  .env.validator.example  .gitignore  .golangci.yml  .lefthook.yml  .pre-commit-config.yaml  @  CHANGELOG.md  CLAUDE.md  CRUSH.md  Dockerfile  Dockerfile-cli  Makefile  README-miner.md  README-validator.md  README.md  auto_update.py  docker-compose-dev.yaml  docker-compose.cli.yaml  docker-compose.dev.yaml  docker-compose.miner.yaml  docker-compose.platform.yaml  docker-compose.shared.yaml  docker-compose.subtensor.yaml  docker-compose.validator.yaml  docker-compose.yaml  dojo_cli.py  e2e_setup.py  entrypoints.sh  env.example  go.mod  go.sum  go.sum.bk  lefthook.yml  main_miner.py  main_validator.py  migration.py  migration2.py  noxfile.py  (+11 more)
.github/: matrix-config.json
.github/workflows/: build-binaries.yaml  build.yaml  ci.yaml  commit-message.yaml  cron.yaml  docker-build.yaml  docker_build.yaml  linter.yaml  post-release.yaml  pr_title.yaml  read-matrix.yaml  release-please.yaml  release.yaml  semantic_release.yaml  tests.yaml
cmd/cli/: main.go
cmd/messaging/: test_requests.sh
cmd/miner/: main.go
cmd/scoring/: main.go
cmd/signature/: main.go
cmd/validator/: main.go
commons/: api_settings.py  block_subscriber.py  cache.py  data_manager.py  dojo_task_tracker.py  exceptions.py  hfl_helpers.py  hfl_heplers.py  objects.py  orm.py  score_storage.py  scoring.py  utils.py
commons/api/: middleware.py  reward_route.py
commons/dataset/: exceptions.py  leaderboard.py  synthetic.py  types.py  utils.py
commons/human_feedback/: __init__.py  dojo.py  exceptions.py  feedback_loop.py  hfl_helpers.py  sanitize.py  score_feedback.py  text_feedback.py  types.py  utils.py
commons/llm/: prompts.py
commons/logging/: patch_logging.py  wandb.py
commons/obfuscation/: obfuscation_utils.py
commons/scoring/: __init__.py  hfl.py  scoring.py
commons/stats/: __init__.py  icc.py
commons/worker_api/: dojo.py
database/: __init__.py  client.py  mappers.py  orm.py  types.py
database/sqlalchemy/: tables.py
docker/: Dockerfile  Dockerfile.dataset
docs/: validator.md
dojo/: __init__.py  analytics.py  block_subscriber.py  constants.py  exceptions.py  mock.py  objects.py  protocol.py
dojo/api/: __init__.py  middleware.py
dojo/base/: miner.py  neuron.py
dojo/chain/: __init__.py  subtensor.py  types.py  utils.py
dojo/external_tasks_pool/: __init__.py  tasks_pool.py  types.py
dojo/human_feedback/: __init__.py  feedback_loop.py  hfl_helpers.py  sanitize.py  score_feedback.py  text_feedback.py  types.py  utils.py
dojo/kami/: __init__.py  kami.py  types.py
dojo/logging/: __init__.py  colors.py  forwarder.py  logging.py  utils.py
dojo/messaging/: README.md  __init__.py  client.py  example.py  exceptions.py  middleware.py  server.py  types.py  utils.py
dojo/scoring/: __init__.py  burn.py  hfl.py  icc.py  scoring.py  utils.py
dojo/settings/: __init__.py  config.py  types.py
dojo/stats/: icc.py
dojo/storage/: __init__.py  cache.py
dojo/utils/: __init__.py  analytics.py  blockchain.py  config.py  core.py  dict_utils.py  env_utils.py  logging.py  netip.py  retry_utils.py  types.py  uids.py  weight_utils.py
dojo/wallet/: __init__.py  path.py  types.py
entrypoints/: analytics_endpoint.py  analytics_upload.py  dataset_service.py  validator_api_service.py
internal/config/: env.go  load.go
internal/core/: node.go  transport.go  types.go
internal/kami/: kami.go  kami_integration_test.go  kami_test.go  types.go  utils.go
internal/miner/: miner.go  types.go
internal/scheduler/: block_callback.go  types.go  utils.go
internal/scoring/: README.md  constants.go  cosine_similarity.go  cubic_transformation.go  minmax_scale.go  normalize.go  pipeline.go  plotting.go  prepare_ground_truth.go  scoring.go  scoring_test.go  transforms.go  types.go
internal/synapse/: client.go  config.go  middleware.go  server.go  types.go  utils.go
internal/syntheticapi/: synthetic.go  synthetic_integration_test.go  synthetic_test.go  types.go
internal/taskapi/: api.go  types.go
internal/validator/: analytics.go  codegen_task.go  score_task.go  subtensor.go  tasks.go  types.go  utils.go  validator.go  voter_task.go
migrations/20250122175333_redesign_schema/: migration.sql
migrations/20250518193456_add_hfl_tables/: migration.sql
migrations/20250609090753_remove_dojo_task_id/: migration.sql
neurons/: miner.py  subscribe_block_headers.py  validator.py  validator_comms.py  validator_heartbeat.py  validator_heartbeats.py  validator_synthetic_tasks.py
neurons/miner/: __init__.py  miner.py  types.py
pkg/chain/: kami.go  kami_test.go  mapper.go  state.go  types.go  utils.go
scripts/: calc_metrics.py  create_synthetic_task.py  extract_dataset.py  fill_score_column.py  inspect_scores.py  print_cli_args.py  validate_migration.py
simulator/: miner.py  validator.py
temp/: types.go
template/: protocol.py
tools/: import_rules_checker.py  parameter_return_checker.py
validator-api/: validator_api_service.py
validator_api/: validator_api_service.py
(+66 files in other folders)
